--- a/package.json
+++ b/package.json
@@ -33,41 +33,41 @@
   },
   "homepage": "https://github.com/Azure/autorest.typescript/blob/master/README.md",
   "devDependencies": {
-    "@microsoft.azure/autorest.testserver": "^2.5.7",
+    "@microsoft.azure/autorest.testserver": "^2.5.10",
     "@types/assert": "0.0.31",
     "@types/glob": "^5.0.35",
-    "@types/mocha": "^2.2.48",
-    "@types/node": "^8.0.28",
-    "@types/should": "^8.3.0",
+    "@types/mocha": "^5.2.0",
+    "@types/node": "^9.6.6",
+    "@types/should": "^13.0.0",
     "@types/webpack": "^4.1.3",
-    "autorest": "^2.0.4245",
-    "coffee-script": "^1.11.1",
+    "autorest": "^2.0.4262",
+    "coffee-script": "^1.12.7",
     "dotnet-sdk-2.0.0": "^1.4.4",
     "glob": "^7.1.2",
     "gulp": "^3.9.1",
-    "gulp-filter": "^5.0.0",
-    "gulp-line-ending-corrector": "^1.0.1",
+    "gulp-filter": "^5.1.0",
+    "gulp-line-ending-corrector": "^1.0.2",
     "iced-coffee-script": "^108.0.11",
-    "marked": "^0.3.6",
+    "marked": "^0.3.19",
     "marked-terminal": "^2.0.0",
-    "mocha": "^5.0.4",
-    "mocha-chrome": "^1.0.3",
+    "mocha": "^5.1.1",
+    "mocha-chrome": "^1.1.0",
     "moment": "~2.21.0",
     "ms-rest-azure-js": "^0.3.0",
-    "ms-rest-js": "^0.3.1",
-    "run-sequence": "*",
-    "should": "5.2.0",
+    "ms-rest-js": "file:../ms-rest-js",
+    "run-sequence": "^2.2.1",
+    "should": "^13.2.1",
     "shx": "^0.2.2",
     "through2-parallel": "^0.1.3",
-    "ts-loader": "^4.1.0",
-    "ts-node": "^5.0.1",
-    "typescript": "^2.8.1",
-    "underscore": "^1.8.3",
-    "webpack": "^4.1.0",
-    "webpack-cli": "^2.0.13",
-    "webpack-dev-server": "^3.1.1",
-    "yargs": "^8.0.2",
-    "yarn": "^1.0.2"
+    "ts-loader": "^4.2.0",
+    "ts-node": "^6.0.0",
+    "typescript": "^2.8.3",
+    "underscore": "^1.9.0",
+    "webpack": "^4.6.0",
+    "webpack-cli": "^2.0.15",
+    "webpack-dev-server": "^3.1.3",
+    "yargs": "^11.0.0",
+    "yarn": "^1.6.0"
   },
   "dependencies": {
     "dotnet-2.0.0": "^1.4.4"
